[gd_scene load_steps=5 format=3 uid="uid://c1hkcomwcy5ra"]

[ext_resource type="PackedScene" uid="uid://dpddi8nvsbcy3" path="res://NPC/cows/cow/cow.tscn" id="1_0d10r"]
[ext_resource type="Script" path="res://NPC/cows/cowArmed/cowArmed.gd" id="2_mcfsc"]
[ext_resource type="Texture2D" uid="uid://vw6eq58q2owa" path="res://art/turret.png" id="3_rd04r"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_iybn2"]

[node name="cowArmed" instance=ExtResource("1_0d10r")]
script = ExtResource("2_mcfsc")
turretRotationTime = 0.1

[node name="AnimationTree" parent="." index="2"]
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_iybn2")

[node name="Turret" type="Sprite2D" parent="." index="6"]
scale = Vector2(0.26087, 0.30303)
texture = ExtResource("3_rd04r")
hframes = 8
vframes = 8

[node name="turretDetection" type="RayCast2D" parent="Turret" index="0"]
scale = Vector2(3.83333, 3.3)
target_position = Vector2(1, -140)
collision_mask = 2

[node name="Line2D" type="Line2D" parent="Turret/turretDetection" index="0"]
visible = false
position = Vector2(6.10352e-05, -4.14633)
scale = Vector2(-0.199641, 1.484)
points = PackedVector2Array(0, -1, -5.00873, -88.9281)

[node name="TimerForTurretRotation" type="Timer" parent="." index="7"]
wait_time = 0.3
autostart = true

[node name="TimerToCycleOfRotation" type="Timer" parent="." index="8"]
wait_time = 0.1
autostart = true

[node name="aimbot" type="Timer" parent="." index="9"]

[node name="bulletCoolDown" type="Timer" parent="." index="10"]

[connection signal="timeout" from="TimerForTurretRotation" to="." method="_on_timer_for_turret_rotation_timeout"]
[connection signal="timeout" from="TimerToCycleOfRotation" to="." method="_on_timer_to_cycle_of_rotation_timeout"]
[connection signal="timeout" from="aimbot" to="." method="_on_aimbot_timeout"]
[connection signal="timeout" from="bulletCoolDown" to="." method="_on_bullet_cool_down_timeout"]
